Improvements
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>